# Photoforge

./: .gitignore  Claude.md  LICENSE  README.md
photoforge/: .gitignore  Cargo.toml  README.md
photoforge/crates/photoforge-core/: Cargo.toml
photoforge/crates/photoforge-core/benches/: dhash.rs  neardup.rs
photoforge/crates/photoforge-core/src/: classify.rs  date.rs  db.rs  dedupe.rs  dhash.rs  error.rs  exif.rs  hash.rs  indexer.rs  lib.rs  organize.rs  scan.rs  schema.sql  sidecar.rs  thumbnail.rs
photoforge/frontend/: index.html  main.js  styles.css
photoforge/models/: README.md
photoforge/src-tauri/: Cargo.toml  tauri.conf.json
photoforge/src-tauri/capabilities/: default.json
photoforge/src-tauri/src/: main.rs
