[package]
name = "photoforge"
description = "photoforge — a desktop photo organizer (Tauri app shell)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# The binary produced by the Tauri app.
[[bin]]
name = "photoforge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
photoforge-core = { path = "../crates/photoforge-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
