[package]
name = "photoforge-core"
description = "Core photo-organization library for photoforge (indexing, hashing, EXIF, thumbnails). No Tauri dependencies."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
walkdir = "2"
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
kamadak-exif = "0.6"
blake3 = "1"
